--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
   },
   "browserslist": "last 2 versions",
   "dependencies": {
-    "axios": "^0.19.0",
-    "bcrypt": "^3.0.7",
+    "axios": "^0.21.1",
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
     "connect-flash": "0.1.1",
     "connect-mongo": "^3.2.0",
@@ -42,7 +42,7 @@
     "babel-preset-es2015": "6.24.0",
     "concurrently": "3.4.0",
     "css-loader": "^3.4.0",
-    "node-sass": "4.5.0",
+    "node-sass": "^6.0.1",
     "nodemon": "^1.19.4"
   }
 }
